[project]
name = "medexqa"
version = "0.1.0"
description = "MedExQA Evaluation - Medical QA with Multiple Explanations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.0.0",
    "verifiers>=0.1.2.post0",
    "openai>=1.0.0",
    "pandas>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["medexqa.py"]

[tool.prime.environment]
# lets Prime/vf-eval know where the loader lives in a flat repo
loader = "medexqa:load_environment"
display_name = "MedExQA"
visibility = "PUBLIC"
